--- a/Sidebery-Sidebar.css
+++ b/Sidebery-Sidebar.css
@@ -1,113 +1,105 @@
-	/*   COLORS   */
-#root.root{
-	--selected-border: none;
-	--nav-btn-active-shadow: none;
-	--clicked-bg: var(--hover-bg);
-	--ff-border: transparent;
+  /*   COLORS   */
+#root.root {
+  --selected-border:        none;
+  --nav-btn-active-shadow:  none;
+  --clicked-bg:             var(--hover-bg);
+  --ff-border:              var(--toolbar-bg) !important;
 }
 
-#root[data-color-scheme=dark]{
-	--toolbar-bg:        hsl(252, 4%, 6%);
-	--frame-bg:          hsl(252, 4%, 6%);
-	--hover-bg:         hsla(252, 4%, 100%, 8%);
-	--active-bg:        hsla(252, 4%, 100%, 8%);
-	--tabs-activated-bg: /*hsl(252, 4%, 18%)*/ hsl(240, 38%, 18%);
-	--tabs-activated-fg: hsl(240, 79%, 80%);
-	--selected-bg:       hsl(252, 4%, 20%);
-	--ctx-menu-bg:       hsl(252, 4%, 9%);
-	--ctx-menu-separator:hsl(252, 4%, 15%);
-	--popup-bg:          hsl(252, 4%, 9%);
-	--search-border:     #333;
-
-	--tabs-activated-shadow: 0 1px 4px -1px rgba(0,0,0,0.282);
-	--ctx-menu-shadow: 0 0 0 1px var(--ff-popup-border,black), 0 1px 16px 0 rgba(0,0,0,.7);
+#root[data-color-scheme=dark] {
+  --toolbar-bg:             hsl(252, 4%, 6%);
+  --frame-bg:               hsl(252, 4%, 6%);
+  --hover-bg:               hsla(252, 4%, 100%, 8%);
+  --active-bg:              hsla(252, 4%, 100%, 8%);
+  --tabs-activated-bg:      hsl(240, 38%, 18%);
+  --tabs-activated-fg:      hsl(240, 79%, 80%);
+  --selected-bg:            hsl(252, 4%, 20%);
+  --ctx-menu-bg:            hsl(252, 4%, 9%);
+  --ctx-menu-separator:     hsl(252, 4%, 15%);
+  --popup-bg:               hsl(252, 4%, 9%);
+  --search-border:          #333;
+  --ff-tab-background-text: hsl(252, 4%, 90%) !important;
+  --tabs-activated-shadow:  0 1px 4px -1px rgba(0,0,0,0.282);
+  --ctx-menu-shadow:        0 0 0 1px var(--ff-popup-border,black), 0 1px 16px 0 rgba(0,0,0,.7);
 }
-
-#root[data-color-scheme=dark] .Tab[data-pin="true"]{
-	--tabs-activated-bg: /*hsl(252, 4%, 22%)*/ hsl(240, 40%, 22%)}
-
-
-#root[data-color-scheme=light]{
-	--frame-bg:          #F9F9FB;
-	--tabs-activated-bg: #E2E2E3;
-	--tabs-activated-shadow: none;
+#root[data-color-scheme=dark] .Tab[data-pin="true"] {
+  --tabs-activated-bg:      hsl(240, 40%, 25%);
 }
 
 
-
-
-	/*   NAVBAR   */
-#root.root{
-	--nav-btn-width: 32px;
-	--nav-btn-height: 32px;
+#root[data-color-scheme=light] {
+  --frame-bg:               #F9F9FB;
+  --tabs-activated-bg:      #E2E2E3;
+  --tabs-activated-shadow:  none;
 }
 
-.NavigationBar .nav-item:not([data-active="true"]) .icon{
-	opacity:.65}
-
-.NavigationBar .nav-item .len{
-	text-shadow:none;
-	top:-2px;
-	right:0}
 
 
 
+  /*   NAVBAR   */
+#root.root {
+  --nav-btn-width: 32px;
+  --nav-btn-height: 32px;
+}
 
-	/*   TABS   */
+.NavigationBar .nav-item:not([data-active="true"]) .icon {opacity: .65}
+
+.NavigationBar .nav-item .len {
+  text-shadow: none;
+  top: -2px}
+
+
+
+
+  /*   TABS   */
 #root[data-pinned-tabs-position="panel"][data-pinned-tabs-list="true"] .PinnedTabsBar {
-	padding: 0 0 2px;
-	margin-top: -1px}
+  padding: 0 0 2px;
+  margin-top: -1px}
 
-.PinnedTabsBar::after {
-	bottom: 0}
+.PinnedTabsBar::after {bottom: 0}
 
-#root.root[data-color-scheme=dark] .ScrollBox > .top-shadow{
-	box-shadow: 0  1px 12px 0 #000}
+#root.root[data-color-scheme=dark] .ScrollBox > .top-shadow {
+  box-shadow: 0  1px 12px 0 #000}
 
-#root.root[data-color-scheme=dark] .ScrollBox > .bottom-shadow{
-	box-shadow: 0 -1px 12px 0 #000}
+#root.root[data-color-scheme=dark] .ScrollBox > .bottom-shadow {
+  box-shadow: 0 -1px 12px 0 #000}
 
-#root.root[data-color-scheme=light] .ScrollBox > .top-shadow{
-	box-shadow: 0  1px 12px 0 #0006}
+#root.root[data-color-scheme=light] .ScrollBox > .top-shadow {
+  box-shadow: 0  1px 12px 0 #0006}
 
-#root.root[data-color-scheme=light] .ScrollBox > .bottom-shadow{
-	box-shadow: 0 -1px 12px 0 #0006}
-
+#root.root[data-color-scheme=light] .ScrollBox > .bottom-shadow {
+  box-shadow: 0 -1px 12px 0 #0006}
 
 
 
-	/*   MENU   */
-.CtxMenu .box{
-	border-radius: 4px;
-	min-width:180px;
-	padding:0}
 
-.CtxMenu .sub-menu{
-	border-radius: 4px}
+  /*   MENU   */
+.CtxMenu .box {
+  border-radius: 4px;
+  min-width: 180px;
+  padding: 0}
 
-.CtxMenu .inline-group:not(:last-of-type){
-	padding: 1px 0 2px;
-	box-shadow:inset 0 -1px 0 0 var(--ctx-menu-separator)}
+.CtxMenu .sub-menu {border-radius: 4px}
 
-.CtxMenu .inline-group:first-of-type{
-	padding: 0 0 2px}
+.CtxMenu .inline-group:not(:last-of-type) {
+  padding: 1px 0 2px;
+  box-shadow: inset 0 -1px 0 0 var(--ctx-menu-separator)}
 
-.CtxMenu .icon-opt{
-	min-width:33%}
+.CtxMenu .inline-group:first-of-type {padding: 0 0 2px}
+
+.CtxMenu .icon-opt {min-width: 33%}
 
 .CtxMenu .icon-opt:before,
-.CtxMenu .opt:before{
-	border-radius:0;
-	opacity:.1}
+.CtxMenu .opt:before {
+  border-radius:0;
+  opacity: .1}
 
-.CtxMenu .list-group{
-	padding:1px 0 3px 0}
+.CtxMenu .icon-opt:active {opacity: 1}
 
-.CtxMenu .opt{
-	padding:5px 10px}
+.CtxMenu .list-group {padding: 1px 0 3px 0}
 
-.CtxMenu .opt[data-separator=true]{
-	padding:1px 0}
+.CtxMenu .opt {padding: 5px 10px}
 
-.CtxMenu .sub-menu .scrollable{
-	padding:3px 0}
+.CtxMenu .opt[data-separator=true] {padding: 1px 0}
+
+.CtxMenu .sub-menu .scrollable {padding: 3px 0}
